--- a/views/display_puppy.erb
+++ b/views/display_puppy.erb
@@ -1,5 +1,5 @@
 <body>
   <p>Name: <%= @name %></p>
   <p>Breed: <%= @breed %></p>
-  <p>Age: <%= @age %> months</p>
+  <p>Age: <%= @months_old %> months</p>
 </body>
